# aoc

./: .gitignore  Readme.md  go.mod  main.go
.github/workflows/: go.yml  rust.yml
2025/: 2025.go
2025/day1/: day1.go  day1_test.go
2025/day2/: benchmark_test.go  day2.go  day2_test.go
2025/day3/: benchmark_test.go  day3.go
2025/day4/: day4.go
2025/day5/: benchmark_test.go  day5.go
2025/day6/: benchmark_test.go  day6.go  day6_test.go
2025/util/: read.go  sets.go
go/: go.mod
go/2025/: 2025.go
go/2025/day1/: benchmark_test.go  day1.go  day1_test.go
go/2025/day10/: benchmark_test.go  day10.go  day10_test.go
go/2025/day11/: benchmark_test.go  day11.go  day11_test.go
go/2025/day12/: benchmark_test.go  day12.go  day12_test.go
go/2025/day2/: day2_test.go
go/2025/day3/: benchmark_test.go  day3.go  day3_test.go
go/2025/day4/: benchmark_test.go  day4.go  day4_test.go
go/2025/day5/: benchmark_test.go  day5.go  day5_test.go
go/2025/day6/: benchmark_test.go  day6.go  day6_test.go
go/2025/day7/: benchmark_test.go  day7.go  day7_test.go
go/2025/day8/: benchmark_test.go  day8.go  day8_test.go
go/2025/day9/: benchmark_test.go  day9.go  day9_2.go  day9_test.go
go/2025/util/: sets.go  sort.go
go/util/: math.go  read.go  sort.go
rust/: Cargo.toml  readme.md
rust/benches/: day10_bench.rs  day3_bench.rs  day8_bench.rs
rust/src/: day10.rs  day3.rs  day8.rs  lib.rs  main.rs
rust/src/day10/: solve.rs  tests.rs
rust/src/day3/: solve.rs  tests.rs
rust/src/day8/: solve.rs  tests.rs
rust/src/util/: read.rs
